feat: add index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,4 @@
-<h2>hello</h2>
+<form action="">
+  <input type="text" placeholder="input URL here" name="url" value>
+  <button type="submit">Shorten</button>
+</form>
