--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Url Shortener</title>
 </head>
+
 <body>
+  <h1>URL Shortener</h1>
+  {{!-- 圖片位址修正 --}}
+  <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" width="10%"
+    alt="">
   {{{body}}}
 </body>
+
 </html>
