--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<form action="">
-  <input type="text" placeholder="input URL here" name="url" value>
+<form action="/" method="POST">
+  <input type="text" placeholder="input URL here" name="url" value="{{short}}">
   <button type="submit">Shorten</button>
 </form>
