feat: add alert for empty inpution and fix the problem that may generate the same shorten url

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <form action="/" method="POST">
+  <p>{{alert}}</p>
   <input type="text" placeholder="input URL here" name="url" value="{{short}}">
   <button type="submit">Shorten</button>
 </form>
